// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render correctly 1`] = `
<div
  className="form-group undefined"
  id="reply-1"
>
  <label
    className="control-label h5"
    htmlFor="choices-for-field-11"
  >
    label
  </label>
  <span
    className="help-block"
  >
    Plusieurs choix sont possibles
  </span>
  <CheckboxGroup
    className="input-choices"
    id="choices-for-field-11"
    name="choices-for-field-11"
  >
    <div>
      <InjectIntl(ReactBootstrapInput)
        checked={false}
        disabled={false}
        id="reply-1_choice-20"
        image={null}
        name="choices-for-field-11"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="Athlétisme"
      >
        Athlétisme
      </InjectIntl(ReactBootstrapInput)>
    </div>
    <div>
      <InjectIntl(ReactBootstrapInput)
        checked={false}
        disabled={false}
        id="reply-1_choice-21"
        image={null}
        name="choices-for-field-11"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="Natation"
      >
        Natation
      </InjectIntl(ReactBootstrapInput)>
    </div>
    <div>
      <InjectIntl(ReactBootstrapInput)
        checked={false}
        disabled={false}
        id="reply-1_choice-22"
        image={null}
        name="choices-for-field-11"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="Sports collectifs"
      >
        Sports collectifs
      </InjectIntl(ReactBootstrapInput)>
    </div>
    <div>
      <InjectIntl(ReactBootstrapInput)
        checked={false}
        disabled={false}
        id="reply-1_choice-23"
        image={null}
        name="choices-for-field-11"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="Sports individuels"
      >
        Sports individuels
      </InjectIntl(ReactBootstrapInput)>
    </div>
  </CheckboxGroup>
</div>
`;

exports[`<Checkbox /> should render with an other field 1`] = `
<div
  className="form-group undefined"
  id="reply-1"
>
  <label
    className="control-label h5"
    htmlFor="choices-for-field-11"
  >
    label
  </label>
  <span
    className="help-block"
  >
    Plusieurs choix sont possibles
  </span>
  <CheckboxGroup
    className="input-choices"
    id="choices-for-field-11"
    name="choices-for-field-11"
  >
    <div>
      <InjectIntl(ReactBootstrapInput)
        checked={false}
        disabled={false}
        id="reply-1_choice-20"
        image={null}
        name="choices-for-field-11"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="Athlétisme"
      >
        Athlétisme
      </InjectIntl(ReactBootstrapInput)>
    </div>
    <div>
      <InjectIntl(ReactBootstrapInput)
        checked={false}
        disabled={false}
        id="reply-1_choice-21"
        image={null}
        name="choices-for-field-11"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="Natation"
      >
        Natation
      </InjectIntl(ReactBootstrapInput)>
    </div>
    <div>
      <InjectIntl(ReactBootstrapInput)
        checked={false}
        disabled={false}
        id="reply-1_choice-22"
        image={null}
        name="choices-for-field-11"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="Sports collectifs"
      >
        Sports collectifs
      </InjectIntl(ReactBootstrapInput)>
    </div>
    <div>
      <InjectIntl(ReactBootstrapInput)
        checked={false}
        disabled={false}
        id="reply-1_choice-23"
        image={null}
        name="choices-for-field-11"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
        value="Sports individuels"
      >
        Sports individuels
      </InjectIntl(ReactBootstrapInput)>
    </div>
    <Other
      disabled={false}
      field={
        Object {
          "choices": Array [
            Object {
              "id": 20,
              "label": "Athlétisme",
            },
            Object {
              "id": 21,
              "label": "Natation",
            },
            Object {
              "id": 22,
              "label": "Sports collectifs",
            },
            Object {
              "id": 23,
              "label": "Sports individuels",
            },
          ],
          "helpText": "Plusieurs choix sont possibles",
          "id": 11,
          "isOtherAllowed": true,
          "required": true,
          "slug": "pour-quel-type-d-epreuve-etes-vous-pret-a-acheter-des-places",
          "type": "checkbox",
        }
      }
      isReduxForm={false}
      onChange={[Function]}
      value=""
    />
  </CheckboxGroup>
</div>
`;
